--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-code"></span></div>
+							<div class="logo"><span class="fa fa-code"></span></div>
 							<h2>Tristan Phillips</h2>
 							<p>B.S. Computer Engineering and B.S. Physics from the University of Alabama</a></p>
 						</div>
@@ -153,7 +153,7 @@
 								<li class="icon solid fa-home">Huntsville, AL</li>
 								<li class="icon solid fa-phone">(813) 743-2186</li>
 								<li class="icon solid fa-envelope"><a href="#">phillipskalani@gmail.com</a></li>
-								<li class="icon brands fa-linkedin"><a href="#">linkedin.com/in/tristan-k-phillips</a></li>
+								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/tristan-k-phillips">linkedin.com/in/tristan-k-phillips</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
