--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="fa fa-code"></span></div>
+							<div class="logo"><span class="fas fa-code fa-3x"></span></div>
 							<h2>Tristan Phillips</h2>
 							<p>B.S. Computer Engineering and B.S. Physics from the University of Alabama</a></p>
 						</div>
