--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
+								<li><a href="resume.html">Resumé</a></li>
+								<li><a href="projects.html">Projects</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -41,7 +41,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="fas fa-code fa-3x"></span></div>
+							<div class="logo"><span class="fas fa-microchip fa-3x"></span></div>
 							<h2>Tristan Phillips</h2>
 							<p>B.S. Computer Engineering and B.S. Physics from the University of Alabama</a></p>
 						</div>
