added job title

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 						<div class="inner">
 							<div class="logo"><span class="fas fa-microchip fa-3x"></span></div>
 							<h2>Tristan Phillips</h2>
-							<p>B.S. Computer Engineering and B.S. Physics from the University of Alabama</a></p>
+							<p>Electrical Engineer at R2C Aerospace <br />
+								B.S. Computer Engineering and B.S. Physics from the University of Alabama</a></p>
 						</div>
 					</section>
 
