fixed menues again

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="resume.html">Resumé</a></li>
 								<li><a href="projects.html">Projects</a></li>
-								<li><a href="about.html">Resumé</a></li>
+								<li><a href="about.html">About Me</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
