--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="resume.html">Resumé</a></li>
-								<li><a href="projects.html">Projects</a></li>
 								<li><a href="about.html">About Me</a></li>
+								<li><a href="projects.html">Projects</a></li>
+								<li><a href="resume.html">Resumé</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -69,12 +69,24 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
+										<h2 class="major">Personal Projects</h2>
 										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="projects.html" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
+
+						<!-- Three -->
+						<section id="three" class="wrapper alt spotlight style1">
+							<div class="inner">
+								<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+								<div class="content">
+									<h2 class="major">Resumé</h2>
+									<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+									<a href="resume.html" class="special">Learn more</a>
+								</div>
+							</div>
+						</section>
 
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
