--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							</section>
 
 						<!-- Three -->
-						<section id="three" class="wrapper alt spotlight style3">
+						<section id="three" class="wrapper spotlight style3">
 							<div class="inner">
 								<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 								<div class="content">
