--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+							<p>THIS FORM IS STILL A WORK IN PROGRESS, DO NOT USE</p>
 							<form method="post" action="test.php">
 								<div class="fields">
 									<div class="field">
