working on contact form

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p>THIS FORM IS STILL A WORK IN PROGRESS, DO NOT USE</p>
-							<form method="post" action="test.php">
+							<form method="post" action="mailto:phillipskalani@gmail.com?subject = Hello from #name&body = #message">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -115,7 +115,7 @@
 							<ul class="contact">
 								<li class="icon solid fa-home">Huntsville, AL</li>
 								<li class="icon solid fa-phone">(813) 743-2186</li>
-								<li class="icon solid fa-envelope"><a href="#">phillipskalani@gmail.com</a></li>
+								<li class="icon solid fa-envelope"><a href="mailto:phillipskalani@gmail.com">phillipskalani@gmail.com</a></li>
 								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/tristan-k-phillips">linkedin.com/in/tristan-k-phillips</a></li>
 							</ul>
 							<ul class="copyright">
