--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 							<ul class="contact">
 								<li class="icon solid fa-home">Huntsville, AL</li>
 								<li class="icon solid fa-phone">(813) 743-2186</li>
-								<li class="icon solid fa-envelope"><a href="mailto:phillipskalani@gmail.com"></a>phillipskalani@gmail.com</a></li>
-								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/tristan-k-phillips" target="_blank" rel="noopener noreferrer"></a>>linkedin.com/in/tristan-k-phillips</a></li>
+								<li class="icon solid fa-envelope"><a href="mailto:phillipskalani@gmail.com">phillipskalani@gmail.com</a></li>
+								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/tristan-k-phillips" target="_blank" rel="noopener noreferrer">linkedin.com/in/tristan-k-phillips</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
