--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p>THIS FORM IS STILL A WORK IN PROGRESS, DO NOT USE</p>
-							<form method="post" action="mailto:phillipskalani@gmail.com?subject = Hello from #name&body = #message">
+							<form method="post" action="emailform.php">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
