--- a/thanks.html
+++ b/thanks.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Tristan Phillips</title>
+		<title>Generic - Solid State by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,8 +18,8 @@
 			<div id="page-wrapper">
 
 				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Tristan Phillips</a></h1>
+					<header id="header">
+						<h1><a href="index.html">Solid State</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -39,52 +39,44 @@
 						</div>
 					</nav>
 
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<div class="logo"><span class="fas fa-microchip fa-3x"></span></div>
-							<h2>Tristan Phillips</h2>
-							<p>Electrical Engineer at R2C Aerospace <br />
-								B.S. Computer Engineering and B.S. Physics from the University of Alabama</a></p>
-						</div>
-					</section>
-
 				<!-- Wrapper -->
 					<section id="wrapper">
+						<header>
+							<div class="inner">
+								<h2>Generic</h2>
+								<p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
+							</div>
+						</header>
 
-						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
+						<!-- Content -->
+							<div class="wrapper">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/profile.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">About Me</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="about.html" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
 
-						<!-- two -->
-							<section id="two" class="wrapper alt style1">
-								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
+									<h3 class="major">Lorem ipsum dolor</h3>
+									<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
+
+									<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
+
+									<h3 class="major">Vitae phasellus</h3>
 									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Personal Projects</h3>
+											<h3 class="major">Sed feugiat lorem</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="projects.html" class="special">Learn more</a>
+											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Resumé</h3>
+											<h3 class="major">Nisl placerat</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="resume.html" class="special">Learn more</a>
+											<a href="#" class="special">Learn more</a>
 										</article>
 									</section>
+
 								</div>
-							</section>
+							</div>
 
 					</section>
 
@@ -93,7 +85,7 @@
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p>THIS FORM IS STILL A WORK IN PROGRESS, DO NOT USE</p>
-							<form method="post" action="https://formsubmit.co/phillipskalani@gmail.com">
+							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -111,13 +103,18 @@
 								<ul class="actions">
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
-								<input type="hidden" name="_next" value="https://tristankphillips.com/thanks.html">
 							</form>
 							<ul class="contact">
-								<li class="icon solid fa-home">Huntsville, AL</li>
-								<li class="icon solid fa-phone">(813) 743-2186</li>
-								<li class="icon solid fa-envelope"><a href="mailto:phillipskalani@gmail.com">phillipskalani@gmail.com</a></li>
-								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/tristan-k-phillips" target="_blank" rel="noopener noreferrer">linkedin.com/in/tristan-k-phillips</a></li>
+								<li class="icon solid fa-home">
+									Untitled Inc<br />
+									1234 Somewhere Road Suite #2894<br />
+									Nashville, TN 00000-0000
+								</li>
+								<li class="icon solid fa-phone">(000) 000-0000</li>
+								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
+								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
+								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
