edited return link on thanks page

--- a/thanks.html
+++ b/thanks.html
@@ -47,7 +47,7 @@
 								<p>I'll respond to your email as soon as I can.</p>
 							</div>
 							<div>
-								<a href="#" class="special">Learn more</a>
+								<a href="#" class="special">Return</a>
 							</div>	
 						</header>
 					</section>
