more changes to thanks.html

--- a/thanks.html
+++ b/thanks.html
@@ -45,10 +45,8 @@
 							<div class="inner">
 								<h2>Thank you!</h2>
 								<p>I'll respond to your email as soon as I can.</p>
+								<p><a href="index.html" class="special">Return</a></p>
 							</div>
-							<div>
-								<a href="#" class="special">Return</a>
-							</div>	
 						</header>
 					</section>
 				<!-- Footer -->
