--- a/thanks.html
+++ b/thanks.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Solid State by HTML5 UP</title>
+		<title>Thank you</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Tristan Phillips</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -44,7 +44,7 @@
 						<header>
 							<div class="inner">
 								<h2>Thank you!</h2>
-								<p>I'll respond to your email as soon as I can.</p>
+								<p>I'll respond to your message as soon as I can.</p>
 								<p><a href="index.html" class="special">Return</a></p>
 							</div>
 						</header>
@@ -53,7 +53,7 @@
 					<section id="footer">
 						<div class="inner">
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>Template designed by: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
