--- a/resume.html
+++ b/resume.html
@@ -84,7 +84,6 @@
 				<section id="footer">
 					<div class="inner">
 						<h2 class="major">Get in touch</h2>
-						<p>THIS FORM IS STILL A WORK IN PROGRESS, DO NOT USE</p>
 						<form method="post" action="https://formsubmit.co/phillipskalani@gmail.com">
 							<div class="fields">
 								<div class="field">
@@ -110,6 +109,7 @@
 							<li class="icon solid fa-phone">(813) 743-2186</li>
 							<li class="icon solid fa-envelope"><a href="mailto:phillipskalani@gmail.com">phillipskalani@gmail.com</a></li>
 							<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/tristan-k-phillips" target="_blank" rel="noopener noreferrer">linkedin.com/in/tristan-k-phillips</a></li>
+							<li class="icon brands fa-github"><a href="https://github.com/tkphillips" target="_blank" rel="noopener noreferrer">github.com/tkphillips</a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
