formatted about page

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 								<li class="icon brands fa-github"><a href="https://github.com/tkphillips" target="_blank" rel="noopener noreferrer">github.com/tkphillips</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>Template designed by: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
