--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Tristan Phillips</a></h1>
+						<h1><a href="index">Tristan Phillips</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -30,10 +30,10 @@
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="about.html">About Me</a></li>
-								<li><a href="projects.html">Projects</a></li>
-								<li><a href="resume.html">Resumé</a></li>
+								<li><a href="index">Home</a></li>
+								<li><a href="about">About Me</a></li>
+								<li><a href="projects">Projects</a></li>
+								<li><a href="resume">Resumé</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -59,7 +59,7 @@
 									<div class="content">
 										<h2 class="major">About Me</h2>
 										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="about.html" class="special">Learn more</a>
+										<a href="about" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -74,13 +74,13 @@
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3 class="major">Personal Projects</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="projects.html" class="special">Learn more</a>
+											<a href="projects" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3 class="major">Resumé</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="resume.html" class="special">Learn more</a>
+											<a href="resume" class="special">Learn more</a>
 										</article>
 									</section>
 								</div>
