--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index">Solid State</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -30,10 +30,10 @@
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="about.html">About Me</a></li>
-								<li><a href="projects.html">Projects</a></li>
-								<li><a href="resume.html">Resumé</a></li>
+								<li><a href="index">Home</a></li>
+								<li><a href="about">About Me</a></li>
+								<li><a href="projects">Projects</a></li>
+								<li><a href="resume">Resumé</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
