--- a/thanks.html
+++ b/thanks.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Tristan Phillips</a></h1>
+						<h1><a href="index">Tristan Phillips</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -30,10 +30,10 @@
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="about.html">About Me</a></li>
-								<li><a href="projects.html">Projects</a></li>
-								<li><a href="resume.html">Resumé</a></li>
+								<li><a href="index">Home</a></li>
+								<li><a href="about">About Me</a></li>
+								<li><a href="projects">Projects</a></li>
+								<li><a href="resume">Resumé</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -45,7 +45,7 @@
 							<div class="inner">
 								<h2>Thank you!</h2>
 								<p>I'll respond to your message as soon as I can.</p>
-								<p><a href="index.html" class="special">Return</a></p>
+								<p><a href="index" class="special">Return</a></p>
 							</div>
 						</header>
 					</section>
