--- a/resume.html
+++ b/resume.html
@@ -48,6 +48,18 @@
 							</div>
 						</header>
 
+						<div id="adobe-dc-view" style="height: 360px; width: 500px;"></div>
+							<script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
+								<script type="text/javascript">
+									document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
+									var adobeDCView = new AdobeDC.View({clientId: "5bbd4070461f4c55860e4d9f8175a944", divId: "adobe-dc-view"});
+									adobeDCView.previewFile({
+									content:{location: {url: "https://documentcloud.adobe.com/view-sdk-demo/PDFs/Bodea Brochure.pdf"}},
+									metaData:{fileName: "Bodea Brochure.pdf"}
+								}, {embedMode: "SIZED_CONTAINER"});
+							});
+							</script>
+
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
