--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Generic</h2>
+								<h2>Resumé</h2>
 								<p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
 							</div>
 						</header>
@@ -51,15 +51,15 @@
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
-									<div id="adobe-dc-view" style="height: 360px; width: 500px;"></div>
+									<div id="adobe-dc-view" style="width: 800px;"></div>
 										<script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
 											<script type="text/javascript">
 												document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
-											var adobeDCView = new AdobeDC.View({clientId: "5bbd4070461f4c55860e4d9f8175a944", divId: "adobe-dc-view"});
-											adobeDCView.previewFile({
-											content:{location: {url: "https://documentcloud.adobe.com/view-sdk-demo/PDFs/Bodea Brochure.pdf"}},
-											metaData:{fileName: "Bodea Brochure.pdf"}
-											}, {embedMode: "SIZED_CONTAINER"});
+												var adobeDCView = new AdobeDC.View({clientId: "5bbd4070461f4c55860e4d9f8175a944", divId: "adobe-dc-view"});
+												adobeDCView.previewFile({
+												content:{location: {url: "https://documentcloud.adobe.com/view-sdk-demo/PDFs/Bodea Brochure.pdf"}},
+												metaData:{fileName: "Bodea Brochure.pdf"}
+											}, {embedMode: "IN_LINE"});
 										});
 										</script>
 									<h3 class="major">Lorem ipsum dolor</h3>
