moved resume header

--- a/resume.html
+++ b/resume.html
@@ -51,6 +51,7 @@
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
+									<h2>Resumé</h2>
 									<div id="adobe-dc-view" style="width: 800px;"></div>
 										<script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
 											<script type="text/javascript">
