update to resume page

--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Solid State by HTML5 UP</title>
+		<title>Resumé</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -58,8 +58,8 @@
 												document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
 												var adobeDCView = new AdobeDC.View({clientId: "5bbd4070461f4c55860e4d9f8175a944", divId: "adobe-dc-view"});
 												adobeDCView.previewFile({
-												content:{location: {url: "https://documentcloud.adobe.com/view-sdk-demo/PDFs/Bodea Brochure.pdf"}},
-												metaData:{fileName: "Bodea Brochure.pdf"}
+												content:{location: {url: "resume.pdf"}},
+												metaData:{fileName: "Tristan_Phillips_Resume.pdf"}
 											}, {embedMode: "IN_LINE"});
 										});
 										</script>
