changed pdf format

--- a/resume.html
+++ b/resume.html
@@ -48,10 +48,7 @@
 						</header>
 
 						<!-- Content -->
-							<div class="wrapper">
-								<div class="inner">
-									<section class="pdf">
-									<h2>Resumé</h2>
+									<!-- Adobe's PDF Embbed API -->
 									<div id="adobe-dc-view" style="width: 800px;"></div>
 										<script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
 											<script type="text/javascript">
@@ -63,24 +60,6 @@
 											}, {embedMode: "IN_LINE"});
 										});
 										</script>
-									</section>
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-									</section>
-
-								</div>
-							</div>
 
 					</section>
 
