changed pdf formatting

--- a/resume.html
+++ b/resume.html
@@ -48,6 +48,7 @@
 						</header>
 
 						<!-- Content -->
+							<div class="wrapper">
 									<!-- Adobe's PDF Embbed API -->
 									<div id="adobe-dc-view" style="width: 800px;"></div>
 										<script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
@@ -60,7 +61,7 @@
 											}, {embedMode: "IN_LINE"});
 										});
 										</script>
-
+							</div>
 					</section>
 
 				<!-- Footer -->
