changed pdf formatting

--- a/resume.html
+++ b/resume.html
@@ -49,6 +49,7 @@
 
 						<!-- Content -->
 							<div class="wrapper">
+								<div class="inner">
 									<!-- Adobe's PDF Embbed API -->
 									<div id="adobe-dc-view" style="width: 800px;"></div>
 										<script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
@@ -61,6 +62,7 @@
 											}, {embedMode: "IN_LINE"});
 										});
 										</script>
+								</div>
 							</div>
 					</section>
 
