--- a/resume.html
+++ b/resume.html
@@ -51,7 +51,7 @@
 							<div class="wrapper">
 								<div class="inner">
 									<!-- Adobe's PDF Embbed API -->
-									
+									<div id="adobe-dc-view"></div>
 										<script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
 											<script type="text/javascript">
 												document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
@@ -62,7 +62,7 @@
 											}, {embedMode: "IN_LINE"});
 										});
 										</script>
-								
+								</div>
 							</div>
 					</section>
 
