--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
 												<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
 												<article>
 													<h3>This Website (tristankphillips.com)</h3>
-													<p><span class="image left"><img src="images/htmlcode.png" alt="" /></span>In an effort to learn HTML I decided to start a personal website to serve as an online business card and resumé. 
+													<p><span class="image left"><img src="images/htmlcode.png" alt="" /></span>In an effort to learn HTML I decided to start a personal website to serve as an online business card, project log and resumé. 
 														After learning enough to get this webpage up and running I now know that it involves learning three new languages; HTML, CSS, and JavaScript. 
 														This website is an on-going project and will continue to grow as I get more comfortable with these languages. You can track the progress of the website and read its source code in the details below.</p>
 													<a href="https://github.com/tkphillips/tristankphillips.com" target="_blank" rel="noopener noreferrer" class="special">Details</a>
