added some words

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3 class="major">Personal Projects</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<p>A log of my hardware and software projects</p>
 											<a href="projects" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3 class="major">Resumé</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<p>Click here to view, download, or print my resumé</p>
 											<a href="resume" class="special">Learn more</a>
 										</article>
 									</section>
