added gimbal project

--- a/projects.html
+++ b/projects.html
@@ -68,8 +68,14 @@
 													<a href="https://github.com/tkphillips/tristankphillips.com" target="_blank" rel="noopener noreferrer" class="special">Details</a>
 												</article>
 												<article>
-													<h3>Custom Bluetooth Media Keyboard</h3>
-													<p><span class="image right"><img src="images/pic02.jpg" alt="" /></span>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius. Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat. Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui.</p>
+													<h3>Robotic Cat Toy (Name WIP)</h3>
+													<p><span class="image right"><img src="images/gimbal.jpg" alt="" /></span>When I'm not at home, I often think of how bored my cat is. 
+														To solve this problem I've set out to make something that will play with her automatically while I'm away. Using a Raspberry Pi and 
+														a 3D printed gimbal I am able to control the laser remotely along with streaming video so I can see all her antics.
+													</p>
+													<iframe width="420" height="315"
+														src="https://youtu.be/YaM6udixKHs">
+													</iframe>
 													<a href="projects" class="special">Details</a>
 												</article>
 											</div>
